--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 #Propriedade padrão
 #Precisamos colocar o nome do banco de dados e a senha
-spring.data.mongodb.uri=mongodb+srv://<User>:<Senha>@cluster0.dqngltc.mongodb.net/linguagensDB?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://<User>:<Senha>@cluster0.dqngltc.mongodb.net/<NomeBanco>?retryWrites=true&w=majority
